# guidance-for-automotive-data-platform-on-aws

./: .gitignore  .gitlab-ci.yml  ARCHITECTURE.md  BLUEPRINTS.md  DEPLOY.md  DEPLOYMENT_STATUS.md  ENHANCED_TIRE_TELEMETRY_SPEC.md  GUIDANCE_PITCH.md  INTEGRATION_ARCHITECTURE.md  MANUAL_SETUP.md  MULTI_SOURCE_DATA_INTEGRATION.md  Makefile  QUICKSTART.md  README.md  SAGEMAKER_UNIFIED_STUDIO_SETUP.md  WELL_ARCHITECTED.md  automotive-data-platform-on-aws.code-workspace  deploy-to-new-account.sh
cloudformation/: blueprint-roles.yaml  datazone-domain.yaml  policy-grants.yaml  tire-prediction-project.yaml
datasource/: IMPLEMENTATION_PLAN.md  QUICK_START.md  README.md  requirements.txt
deployment/: add-domain-owner.sh  add-sso-user.sh  cleanup-all.sh  create-sagemaker-domain.sh  create-user-profile.sh  datazone-outputs.env  deploy-base-platform.sh  deploy-complete-platform.sh  deploy-datazone-no-sso.sh  setup-sso-permissions.sh  user-credentials.txt
dsr-artifacts/: ash.html  ash.sarif  ash.summary.md
guidance-for-agentic-customer-360/: .ash.yaml  .bandit  .checkov.yaml  .gitignore  .secrets.baseline  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUCCESS.md  Makefile  QUICK_REFERENCE.md  README.md  deploy.sh  holographic-vehicle-response.json  product-engineering-response.json  product-engineering-v2-response.json  vehicle-cockpit-response.json  vehicle-manufacturing-response.json
guidance-for-data-governance/: Makefile  README.md  app.py
guidance-for-fleet-rebalancing/: ARCHITECTURE_CANVA_GUIDE.md  (+2 more)
guidance-for-predictive-maintenance/: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  API_USAGE.md  Config  Makefile  README.md  README_TO_MAKE_GUIDANCE.md  buildspec.yml  pyproject.toml  solution-manifest.yaml
guidance-for-predictive-maintenance/data/: .gitignore
guidance-for-predictive-maintenance/data/training/: anomaly_summary.csv  normalization_stats.json  tire_telemetry_2025-01.parquet  tire_telemetry_2025-02.parquet  tire_telemetry_2025-03.parquet  tire_telemetry_2025-04.parquet  tire_telemetry_2025-05.parquet  tire_telemetry_2025-06.parquet
guidance-for-predictive-maintenance/deployment/: build-open-source-dist.sh  build-s3-dist.sh  run-unit-tests.sh
guidance-for-predictive-maintenance/deployment/cdk-solution-helper/: README.md  index.js
guidance-for-predictive-maintenance/docs/: CMS_INTEGRATION.md  INFERENCE_STRATEGY.md  WELL_ARCHITECTED_OPERATIONAL_EXCELLENCE.md
guidance-for-predictive-maintenance/documentation/: slow_leak_detection_system.md
guidance-for-predictive-maintenance/documentation/diagrams/: mmt-predictive-maintenance-full.excalidraw  mmt-predictive-maintenance-high-level-flow.plantuml
guidance-for-predictive-maintenance/makefiles/: config.mk  targets.mk
guidance-for-predictive-maintenance/notebooks/: train_tire_model.ipynb
guidance-for-predictive-maintenance/scripts/: generate_training_data.py  train_model.py
guidance-for-predictive-maintenance/source/assets/etl_scripts/: etl_glue_job.py
guidance-for-predictive-maintenance/source/infrastructure/: README.md  app.py  cdk.json  pyproject.toml
guidance-for-predictive-maintenance/source/infrastructure/lib/common/: lambda_bundling.py  lambda_layer_bundling.py  utils.py
guidance-for-predictive-maintenance/source/infrastructure/lib/config/: lambda_alarm_configs.py  monitoring_lambda_registry.py
guidance-for-predictive-maintenance/source/infrastructure/lib/constructs/: alerts_system.py  cms_integration.py  etl_construct.py  ml_construct.py  prediction_model.py
guidance-for-predictive-maintenance/source/infrastructure/lib/constructs/etl_constructs/: etl_data_buckets.py  etl_glue_jobs.py  normalization_stats.py
guidance-for-predictive-maintenance/source/infrastructure/lib/constructs/ml_constructs/: ml_inference_stepfunction.py  ml_realtime_inference.py  ml_training_stepfunction.py
guidance-for-predictive-maintenance/source/infrastructure/lib/constructs/monitoring_constructs/: __init__.py  custom_metrics_monitoring.py  lambda_monitoring.py
guidance-for-predictive-maintenance/source/infrastructure/lib/stacks/: resource_monitoring_stack.py  tire_predictive_maintenance_stack.py
guidance-for-predictive-maintenance/source/lambda/: cms_adapter.py
guidance-for-predictive-maintenance/source/lambda/alerts_cleaner/: pyproject.toml
guidance-for-predictive-maintenance/source/lambda/alerts_cleaner/function/: main.py
guidance-for-predictive-maintenance/source/lambda/alerts_processor/: pyproject.toml
guidance-for-predictive-maintenance/source/lambda/alerts_processor/function/: main.py
guidance-for-predictive-maintenance/source/lambda/custom_resource/: pyproject.toml
guidance-for-predictive-maintenance/source/lambda/custom_resource/function/: main.py
guidance-for-predictive-maintenance/source/lambda/daily_tire_check/: main.py
guidance-for-predictive-maintenance/source/lambda/inference_job_status/: pyproject.toml
guidance-for-predictive-maintenance/source/lambda/inference_job_status/function/: main.py
guidance-for-predictive-maintenance/source/lambda/input_processor/: __init__.py  pyproject.toml
guidance-for-predictive-maintenance/source/lambda/input_processor/function/: main.py
guidance-for-predictive-maintenance/source/lambda/layers/common_dependencies/: pyproject.toml
guidance-for-predictive-maintenance/source/lambda/ml_etl_cleaner/: pyproject.toml
guidance-for-predictive-maintenance/source/lambda/ml_etl_cleaner/function/: main.py
guidance-for-predictive-maintenance/source/lambda/realtime_blowout_risk/: main.py
guidance-for-predictive-maintenance/source/lambda/realtime_inference/: pyproject.toml
guidance-for-predictive-maintenance/source/lambda/realtime_inference/function/: main.py
guidance-for-predictive-maintenance/source/lambda/start_batch_transform/: pyproject.toml
guidance-for-predictive-maintenance/source/lambda/start_batch_transform/function/: main.py
guidance-for-predictive-maintenance/source/lambda/transform_predictions_to_alerts/: pyproject.toml
guidance-for-predictive-maintenance/source/lambda/transform_predictions_to_alerts/function/: main.py
(+423 files in other folders)
