[tool.poetry]
name = "custom-resource-layer"
version = "1.0.0"
description = "Lambda layer for CFN custom resource"
authors = ["Amazon Web Services"]
license = "Apache-2.0"
packages = [
    { include = "*.toml" },
    { include = "*.lock" },
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Apache-2.0",
]

[tool.poetry.dependencies]
attrs = "*"
aws_lambda_powertools = { extras = ["tracer", "validation"], version = ">=3.3.0" }
python = "^3.12"
requests = "*"

[tool.poetry.group.dev.dependencies]
mypy-boto3-dynamodb = "^1.34.0"
mypy-boto3-s3 = "^1.34.0"
mypy-boto3-sqs = "^1.34.0"

[build-system]
requires = [ "poetry-core>=1.9.0" ]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
source = ["."]
omit = ["*/tests/*", "*/test_*.py"]
